--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="matchflow-additional.css">
+    <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='100%25' height='100%25' fill='%23137fec'/><text x='50%25' y='55%25' font-size='10' text-anchor='middle' fill='%23fff' font-family='Arial'>M</text></svg>">
 </head>
 <body>
     <div class="container">
@@ -40,23 +41,7 @@
                     <p>Reserved</p>
                     <span class="badge" id="reserved-count">0</span>
                 </div>
-                <div class="nav-item">
-                    <span class="material-symbols-outlined">chat_bubble</span>
-                    <p>Messages</p>
-                </div>
-
-                <div class="nav-divider">
-                    <p>Recruitment</p>
-                </div>
-
-                <div class="nav-item">
-                    <span class="material-symbols-outlined">work</span>
-                    <p>Job Boards</p>
-                </div>
-                <div class="nav-item">
-                    <span class="material-symbols-outlined">analytics</span>
-                    <p>Insights</p>
-                </div>
+                
 
                 <div class="nav-bottom">
                     <div class="nav-item">
@@ -67,13 +52,13 @@
             </nav>
 
             <div class="sidebar-footer">
-                <div class="profile-card">
-                    <div class="profile-avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDC0X310LWC9ofNZf4vbQQHCBjaEgpddH4dVfeFwrByu_4yocJ7pNlBlu26i0I7yCRECILkNT70LdA8dbDlaS2dmZvckm45YlI4ZwW9Sd-v-KKMveZEDS3wUoNhqK4jkwLB6ZLqzTRZOAXEh8jtscLUA7y2AuKd2Q2oed0ScLo-gBjvBRcJJWzlJ9G7lTV55nuvfSkV95MQq-np6pRtZsnqnZ5qGehgRT0BIVmudJRuDl7xPoQNu-7OPZQLevkIvCbJkMonXnaW5uo');"></div>
+                <div class="profile-card" role="region" aria-label="User profile">
+                    <img id="user-avatar" class="profile-avatar" src="" alt="User avatar" width="40" height="40">
                     <div class="profile-info">
-                        <p class="profile-name" id="company-name">TechCorp Solutions</p>
-                        <p class="profile-plan">Enterprise Plan</p>
+                        <p class="profile-name" id="user-name">Invitado</p>
+                        <p class="profile-plan" id="user-plan" style="display:none;"></p>
                     </div>
-                    <button class="profile-menu">
+                    <button class="profile-menu" aria-label="User menu">
                         <span class="material-symbols-outlined">more_vert</span>
                     </button>
                 </div>
@@ -183,6 +168,27 @@
                 </div>
             </div>
 
+
+    <!-- Small script: populate profile from localStorage if available -->
+    <script>
+        const PLACEHOLDER_AVATAR = 'https://via.placeholder.com/48?text=%3F';
+
+        function populateUserProfile(){
+            const user = JSON.parse(localStorage.getItem('currentUser') || 'null');
+            const avatar = document.getElementById('user-avatar');
+            const name = document.getElementById('user-name');
+            const plan = document.getElementById('user-plan');
+            if(user){
+                avatar.src = user.avatar || PLACEHOLDER_AVATAR;
+                name.textContent = user.name || 'Usuario';
+                if(user.plan){ plan.textContent = user.plan; plan.style.display = 'block'; }
+            } else {
+                avatar.src = PLACEHOLDER_AVATAR;
+                name.textContent = 'Invitado';
+            }
+        }
+        document.addEventListener('DOMContentLoaded', populateUserProfile);
+    </script>
 
     <!-- JavaScript -->
     <script type="module" src="app.js"></script>
