--- a/createOffer.html
+++ b/createOffer.html
@@ -15,65 +15,65 @@
                         <div class="card-body">
                             <form id="formCreateOffer">
                                 <div class="mb-4">
-                                    <label class="form-label">Título de la Oferta</label>
-                                    <input type="text" class="form-control" placeholder="Example: Software Developer" required>
+                                    <label for="titleOffer" class="form-label">Título de la Oferta</label>
+                                    <input id="titleOffer" class="form-control" placeholder="Example: Software Developer" required>
                                 </div>
                                 <div class="mb-4">
-                                    <label class="form-label">Descripción del Cargo</label>
-                                    <textarea class="form-control" rows="3"></textarea>
+                                    <label for="descriptionOffer" class="form-label">Descripción del Cargo</label>
+                                    <textarea id="descriptionOffer" class="form-control" rows="3"></textarea>
                                 </div>
                                 <div class="row mb-2">
                                     <div class="col-md-6 mb-2">
-                                        <label class="form-label">Profesión</label>
-                                        <select class="form-select">
+                                        <label for="professionOffer" class="form-label">Profesión</label>
+                                        <select id="professionOffer" class="form-select">
                                             <option selected>Seleccione Profesión</option>
-                                            <option>Abogado</option>
-                                            <option>Contador</option>
-                                            <option>Arquitecto</option>
-                                            <option>Programador</option>
-                                            <option>Médico</option>
+                                            <option value="abogado">Abogado</option>
+                                            <option value="contador">Contador</option>
+                                            <option value="arquitecto">Arquitecto</option>
+                                            <option value="programador">Programador</option>
+                                            <option value="medico">Médico</option>
                                         </select>
                                     </div>
                                     <div class="col-md-6">
-                                        <label class="form-label">Tipo de Contrato</label>
-                                        <select class="form-select">
+                                        <label for="typeContract" class="form-label">Tipo de Contrato</label>
+                                        <select id="typeContract" class="form-select">
                                             <option selected>Seleccione Tipo</option>
-                                            <option>Indefinido</option>
-                                            <option>Fijo</option>
-                                            <option>Obra o Labor</option>
-                                            <option>Aprendizaje</option>
-                                            <option>Ocasional</option>
+                                            <option value="Indefinido">Indefinido</option>
+                                            <option value="fijo">Fijo</option>
+                                            <option value="obralabor">Obra o Labor</option>
+                                            <option value="aprendizaje">Aprendizaje</option>
+                                            <option value="ocasional">Ocasional</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="row mb-2">
                                     <div class="col-md-6 mb-2">
-                                        <label class="form-label">Ubicación</label>
-                                        <input type="text" class="form-control" placeholder="Bogotá D.C." required>
+                                        <label for="locationOffer" class="form-label">Ubicación</label>
+                                        <input id="locationOffer" type="text" class="form-control" placeholder="Bogotá D.C." required>
                                     </div>
                                     <div class="col-md-6">
-                                        <label class="form-label">Modalidad</label>
-                                        <select class="form-select">
+                                        <label for="modeOffer" class="form-label">Modalidad</label>
+                                        <select id="modeOffer" class="form-select">
                                             <option selected>Seleccione Modalidad</option>
-                                            <option>Presencial</option>
-                                            <option>Remoto</option>
-                                            <option>Híbrido</option>
+                                            <option value="presencial">Presencial</option>
+                                            <option value="remoto">Remoto</option>
+                                            <option value="hibrido">Híbrido</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="row mb-2">
                                     <div class="col-md-6 mb-2">
-                                        <label class="form-label">Salario</label>
-                                        <input type="text" class="form-control" placeholder="$2.550.000" required>
+                                        <label for="salaryOffer" class="form-label">Salario</label>
+                                        <input id="salaryOffer" type="text" class="form-control" placeholder="$2.550.000" required>
                                     </div>
                                     <div class="col-md-6">
-                                        <label class="form-label">Fecha Límite</label>
-                                        <input type="date" class="form-control" required>
+                                        <label for="deadlineOffer" class="form-label">Fecha Límite</label>
+                                        <input id="deadlineOffer" type="date" class="form-control" required>
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-center gap-4 mt-4">
-                                    <button type="submit" class="btn btn-primary">Publicar Oferta</button>
-                                    <button type="button" class="btn btn-secondary">Cancelar</button>
+                                    <button id="submitBtn" type="submit" class="btn btn-primary">Publicar Oferta</button>
+                                    <button id="cancelBtn" type="button" class="btn btn-secondary">Cancelar</button>
                                 </div>
                             </form>
                         </div>
