Complete project reorganization: consolidate JS to script/, CSS to css/, update HTML references

--- a/createOffer.html
+++ b/createOffer.html
@@ -82,6 +82,6 @@
             </div>
         </section>
     </main>
-    <script src="./createOffer.js"></script>
+    <script src="./script/createOffer.js"></script>
 </body>
 </html>
