--- a/dashboard_user.html
+++ b/dashboard_user.html
@@ -191,6 +191,6 @@
     </script>
 
     <!-- JavaScript -->
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./script/app.js"></script>
 </body>
 </html>
