--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="" type="image/svg+xml">  <!--aqui la foto ojo mmgv-->
     <title>MatchFlow</title> <!-- Title of the webpage -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- Bootstrap CSS for layout and components -->
-    <link rel="stylesheet" href="./css/index.css"> 
+    <link rel="stylesheet" href="./css/styles.css"> 
 </head>
 <body>
     
