--- a/login.html
+++ b/login.html
@@ -118,6 +118,6 @@
     <!-- Bootstrap JS for tabs functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom authentication logic -->
-    <script src="./js/login.js"></script>
+    <script src="./script/login.js"></script>
 </body>
 </html>
