Update all file paths to match new directory structure: scripts/ and db.json in root

--- a/candidate.html
+++ b/candidate.html
@@ -255,6 +255,6 @@
       </div>
     </div>
 
-    <script src="./js/candidate.js"></script>
+<script src="./scripts/candidate.js"></script>
   </body>
 </html>
