--- a/company.html
+++ b/company.html
@@ -265,6 +265,6 @@
       </div>
     </div>
 
-    <script src="./js/company.js"></script>
+<script src="./scripts/company.js"></script>
   </body>
 </html>
