--- a/userSearch.html
+++ b/userSearch.html
@@ -95,6 +95,6 @@
     </main>
 
     <!-- JS -->
-    <script src="../script/findFilter.js"></script>
+    <script src="../scripts/findFilter.js"></script>
   </body>
 </html>
